<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="5dp">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_title" 
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="25sp"
        android:textStyle="bold"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
		android:gravity="center"
		android:paddingLeft="65dp"
		android:paddingRight="65dp"/>
 
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp" >
        
        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/food" 
            android:gravity="center"
            android:onClick="food"/>        
        
        <View
            android:layout_width="3dp"
            android:layout_height="3dp" />
        
        <Button 
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity"
            android:gravity="center"
            android:onClick="activity"/>
        
        <View
            android:layout_width="3dp"
            android:layout_height="3dp" />
        
        <Button 
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/empty"
            android:gravity="center"/>
    </FrameLayout>
</LinearLayout>